force-app/main/default/objects/Class_Reg__c/Class_Reg__c.object-meta.xml
<CustomObject>
    <description>A lead that has registered for a class</description>
    <label>Class Registration</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Reg No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>