force-app/main/default/objects/Class_Reg__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The class the student is registered for</description>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>