force-app/main/default/objects/Class_Reg__c/fields/Class_Complete__c.field-meta.xml
<CustomField>
    <fullName>Class_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All sessions in the class have been completed.</description>
    <label>Class Complete</label>
    <type>Checkbox</type>
</CustomField>