force-app/main/default/objects/Class_Reg__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Reason for non-qual.</description>
    <inlineHelpText>Reason for non-qual.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>