force-app/main/default/objects/Class_Reg__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>When the class was completed by the registrant</description>
    <inlineHelpText
  >When the class was completed by the registrant</inlineHelpText>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>