force-app/main/default/objects/Class_Reg__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Full detail of the contact who is the student</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Registrations</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>