force-app/main/default/objects/Class_Reg__c/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <formula>Class__r.Name__c</formula>
    <label>Display Title</label>
    <type>Text</type>
</CustomField>