force-app/main/default/objects/Class_Reg__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description
  >PROGRAMMATIC FIELD: DO NOT EDIT. This field is used by the Master Class system to indicate to a user that they are logged in and acknowledged as who they registered under. It allows the contact to change, but not impact the user&apos;s ability to use the Master Class system.</description>
    <inlineHelpText
  >The student&apos;s email identifier. Used by the Master Class system to indicate to a user that they are logged in and acknowledged as who they registered under.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>