force-app/main/default/objects/Class_Reg__c/fields/Form_Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_ID__c</fullName>
    <description
  >The ID of the form submission to which this student belongs.</description>
    <externalId>true</externalId>
    <label>Form Submission ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>