force-app/main/default/objects/Class_Reg__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description
  >PROGRAMMATIC FIELD: DO NOT EDIT. This field is used by the Master Class system to indicate to a user that they are logged in and acknowledged as who they registered under. It allows the contact to change, but not impact the user&apos;s ability to use the Master Class system.</description>
    <inlineHelpText
  >The student&apos;s name. Used by the Master Class system to indicate to a user that they are logged in and acknowledged as who they registered under.</inlineHelpText>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>