force-app/main/default/objects/Class_Reg__c/fields/Non_Qual__c.field-meta.xml
<CustomField>
    <fullName>Non_Qual__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates that this student is not qualified to be delivered as a lead.</description>
    <label>Non-Qual</label>
    <type>Checkbox</type>
</CustomField>