force-app/main/default/objects/Class_Reg__c/fields/Privacy_Removal_Request__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Removal_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Removal Request</label>
    <type>Checkbox</type>
</CustomField>