force-app/main/default/objects/Class_Reg__c/fields/Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>Reg_Date__c</fullName>
    <description>The date this student registered for this class.</description>
    <label>Reg Date</label>
    <type>Date</type>
</CustomField>