force-app/main/default/objects/Class_Reg__c/fields/Student_Company__c.field-meta.xml
<CustomField>
    <fullName>Student_Company__c</fullName>
    <formula>Contact__r.Company_Name_Holder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Company</label>
    <type>Text</type>
</CustomField>