force-app/main/default/objects/Class_Reg__c/fields/Student_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Record_Type__c</fullName>
    <formula
  >IF(Contact__r.RecordTypeId=&quot;012300000008caM&quot;, &quot;Public Sector&quot;,
IF(Contact__r.RecordTypeId=&quot;012300000008caR&quot;, &quot;Private Sector&quot;,
&quot;Other&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Record Type</label>
    <type>Text</type>
</CustomField>