force-app/main/default/objects/Class_Reg__c/fields/Student_Title__c.field-meta.xml
<CustomField>
    <fullName>Student_Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Title</label>
    <type>Text</type>
</CustomField>