force-app/main/default/objects/Class_Reg__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Transaction Id from OneForm submission.</description>
    <formula>TEXT(Form_Submission_ID__c)</formula>
    <inlineHelpText>Transaction Id from OneForm submission.</inlineHelpText>
    <label>Transaction ID</label>
    <type>Text</type>
</CustomField>