force-app/main/default/objects/Class_Reg__c/listViews/Standard_Class_Regs_View_Anthony.listView-meta.xml
<ListView>
    <fullName>Standard_Class_Regs_View_Anthony</fullName>
    <columns>Non_Qual__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>Student_Company__c</columns>
    <columns>Student_Title__c</columns>
    <columns>Email__c</columns>
    <columns>Class_Complete__c</columns>
    <columns>Promo_Code__c</columns>
    <columns>Student_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>GT - Veeam - Master Class - Disaster Recovery - 210617</value>
    </filters>
    <filters>
        <field>Non_Qual__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Standard Class Regs View - Anthony</label>
</ListView>